[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mathfuncs"
version = "0.0.1"
description = "Commonly used mathematical functions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["src/python"]
include = ["mathfuncs*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["mathfuncs"]
