[project]
name = "mathfuncs"
version = "0.0.1"
description = "Commonly used mathematical functions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
]

[dependency-groups]
dev = [
    "pytest",
    "pre-commit",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["./src/python/mathfuncs"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["mathfuncs"]
